--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "typecheck": "tsc -p . --noEmit"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.17",
+    "@heroicons/react": "^2.0.18",
     "@types/node": "20.5.9",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
@@ -27,5 +29,9 @@
     "react-icons": "^4.11.0",
     "tailwindcss": "^3.3.3",
     "typescript": "5.2.2"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.15",
+    "postcss": "^8.4.29"
   }
 }
