--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "prepare": "husky install",
     "typecheck": "tsc -p . --noEmit"
   },
+  "lint-staged": {
+    "*.{ts,tsx}": "prettier --write"
+  },
   "dependencies": {
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
@@ -32,6 +35,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.15",
+    "lint-staged": "^14.0.1",
     "postcss": "^8.4.29"
   }
 }
